welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:4: error: '<-' expected but ')' found.
    for (nbBaggle<=2) {
                    ^Poucet:9: error: illegal start of simple expression
  }
  ^